# MarlinMT

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  mkdocs.yml
benchmarking/: CMakeLists.txt  PlotScaling.C  PlotScalingBookStore.C  PlotScalingBookStoreDst.C  Readme.md  cpu_crunching.xml  extract_scaling.sh  hist_filling.xml  run-all-benchmarks  run-benchmarking  run-benchmarking-bookstore  run-benchmarking-bookstore-Marlin  run-benchmarking-scheduler
benchmarking/Marlin/: README.md  steer.xml
benchmarking/Marlin/MarlinBenchCpuCrunch/: CMakeLists.txt  README
benchmarking/Marlin/MarlinBenchCpuCrunch/include/: MarlinBenchCpuCrunchProcessor.h
benchmarking/Marlin/MarlinBenchCpuCrunch/src/: MarlinBenchCpuCrunchProcessor.cc
benchmarking/Marlin/MarlinBenchFillHist/: CMakeLists.txt  README
benchmarking/Marlin/MarlinBenchFillHist/include/: MarlinBenchHistProcessor.h
benchmarking/Marlin/MarlinBenchFillHist/src/: MarlinBenchHistProcessor.cc
benchmarking/plugins/: HistogramFilling.cc  MarlinBenchHistNativProcessor.cc  MarlinBenchHistProcessor.cc  MarlinBenchHistProcessor0.cc  MarlinBenchHistProcessor1.cc  MarlinHistFillingFromDST.cc  MarlinHistFillingFromDST.cpp
doc/: CMakeLists.txt  Doxyfile  overview.txt
doc/mkdoxygen/: Doxyfile
source/: CMakeLists.txt
source/book/: CMakeLists.txt  ConfigTemplate.h
source/book/include/: histConv.hpp  histConv.hpp.dcl
source/book/include/marlin/book/: BookStore.h  Condition.h  Entry.h  EntryData.h  Flags.h  Handle.h  Hist.h  HistEntry.h  HistEntryData.h  HistEntryDataBase.h  MemLayout.h  ROOTAdapter.h  (+5 more)
source/book/src/: BookStore.cc  BookStore.cc~HEAD  BookStore.cpp  Condition.cc  Entry.cc  Hist.cc  Root6SerelizerStore.cc  Root6SerializerStore.cc  RootHistV7ToV6Conversion.cc  Selection.cc  StoreWriter.cc  StoreWriterDummy.cc  ToRoot6.cc  histConv.cpp
source/book/src/impl/: RootHistV7ToV6Conversion.cc  StoreWriter.cc  StoreWriterDummy.cc
source/dd4hep/: CMakeLists.txt
source/dd4hep/plugins/: DD4hepGeometry.cc
source/framework/: .gitignore  CMakeLists.txt
source/framework/include/: jenkinsHash.h
source/framework/include/marlin/: Application.h  BookStoreManager.h  CmdLineParser.h  Component.h  Configuration.h  DataSourcePlugin.h  Exceptions.h  GeometryManager.h  GeometryPlugin.h  IScheduler.h  LoggerManager.h  Logging.h  Parameter.h  PluginManager.h  Processor.h  ProcessorApi.h  RandomSeedManager.h  Sequence.h  SimpleScheduler.h  Utils.h  XMLParser.h
source/framework/include/marlinmt/: Application.h  BookStoreManager.h  CmdLineParser.h  Component.h  Configuration.h  DataSourcePlugin.h  EventExtensions.h  EventStore.h  Exceptions.h  Extensions.h  GeometryManager.h  GeometryPlugin.h  IScheduler.h  LoggerManager.h  Logging.h  LogicalExpressions.h  Parameter.h  PluginManager.h  Processor.h  ProcessorApi.h  RandomSeedManager.h  RunHeader.h  Sequence.h  SimpleScheduler.h  Utils.h  Validator.h
source/framework/main/: Marlin.cc  MarlinMT.cc  MarlinMTDumpPlugins.cc  MarlinMTShellCompletion.cc  MarlinShellCompletion.cc
source/framework/plugins/: CPUCrunchingProcessor.cc  EmptyGeometry.cc  MemoryMonitorProcessor.cc  Statusmonitor.cc  TestProcessor.cc  XMLConfigReader.cc  XMLConfigWriter.cc
source/framework/scripts/: marlin-completion.bash  marlinmt-completion.bash  marlinmt-shell-functions.bash
source/framework/src/: Application.cc  BookStoreManager.cc  CmdLineParser.cc  Component.cc  Configuration.cc  DataSourcePlugin.cc  EventExtensions.cc  Exceptions.cc  GeometryManager.cc  GeometryPlugin.cc  IScheduler.cc  LoggerManager.cc  Logging.cc  LogicalExpressions.cc  Parameter.cc  PluginManager.cc  Processor.cc  ProcessorApi.cc  RandomSeedManager.cc  Sequence.cc  SimpleScheduler.cc  Utils.cc  XMLParser.cc
source/framework/src/concurrency/: PEPScheduler.cc
source/gear/: CMakeLists.txt
source/gear/plugins/: GearGeometry.cc
source/include/marlin/: Application.h  EventStore.h  Exceptions.h  Extensions.h  IScheduler.h  Processor.h  ProcessorApi.h  RandomSeedManager.h  ReaderListener.h  RunHeader.h  RunInfo.h  Sequence.h  XMLParser.h  book.h  hist.h
source/include/marlin/book/: .MemLayout.h.swp  .ModifierManager.h.swp  BookStore.h  Condition.h  Entry.h  EntryData.h  FillMgr.h  Filler.h  Flags.h  Handle.h  Hist.h  MemLayout.h  Modifier.h  ModifierManager.h  ROOTAdapter.h  Selection.h  bookStore.h  hist.h  util.h
source/lcio/: CMakeLists.txt
source/lcio/plugins/: DumpEventProcessor.cc  EventSelectorProcessor.cc  LCIOEventUnpackingProcessor.cc  LCIOFileSource.cc  LCIOOutputProcessor.cc  StdHepFileSource.cc
source/lcio/src/: ReaderListener.cc
source/src/: Application.cc  DataSourcePlugin.cc  LCIOOutputProcessor.cc  ProcessorApi.cc  Sequence.cc  SimpleScheduler.cc  XMLParser.cc  book.cc
source/src/book/: .Hist.cc.swp  BookStore.cc  Condition.cc  Hist.cc  Selection.cc
source/src/concurrency/: PEPScheduler.cc
source/src/plugins/: CPUCrunchingProcessor.cc  EventSelectorProcessor.cc  LCIOEventUnpackingProcessor.cc  MemoryMonitorProcessor.cc  Statusmonitor.cc  StdHepFileSource.cc  TestProcessor.cc
test/: CMakeLists.txt  Readme.md
test/cmake/: MarlinUnitTesting.cmake  runmarlin.cmake.in
test/find_package/: Readme.md
test/find_package/failing/: CMakeLists.txt  simple.cc
test/find_package/simple/: CMakeLists.txt  simple.cc
test/include/: TestEventModifier.h  UnitTesting.h
test/marlintest/include/: TestProcessorEventSeeder.h
test/marlintest/main/: test-book-store.cc
test/marlintest/src/: TestEventModifier.cc  TestProcessorEventSeeder.cc
test/processors/: TestEventModifier.cc  TestHistogram.cc  TestProcessorEventSeeder.cc
test/src/: TestEventModifier.cc  TestProcessorEventSeeder.cc
test/steer/: base-eventmodifier.xml  eventmodifier.xml  gear_simjob.xml  histogram.xml  processoreventseeder.xml
test/testmarlin/: base-eventmodifier.xml  processoreventseeder.xml
test/tests/: benchmark-book-store.cc  test-book-store-book.cc  test-book-store-find.cc  test-book-store-store.cc  test-book-store.cc  test-clock.cc  test-filler.cc  test-mem-layout.cc  test-thread-pool.cc  test-validator.cc
(+59 files in other folders)
